--- a/location/index.html
+++ b/location/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.22&callback=initMap"
-            async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.22"
+           ></script>
     <style type="text/css">
         html, body {
             height: 100%;
@@ -34,21 +34,26 @@
 
     var rider;
     var drivers=[];
-    var marker;
     var map;
     $.urlParam = function(name){
         var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
         return results[1] || 0;
     }
+
+    initMap()
     function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: 22.717081666666665, lng: 75.87155666666666},
-            zoom: 15
-        });
+        var marker, i;
         rider = $.urlParam('r')
         drivers = $.urlParam('d').split(";")
         var riderLoc = rider.split(",")
-        marker = new google.maps.Marker({
+        map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: Number(riderLoc[0]), lng: Number(riderLoc[1])},
+            zoom: 15
+        });
+        var infowindow = new google.maps.InfoWindow();
+
+
+        var driverMarker = new google.maps.Marker({
             position: new google.maps.LatLng(riderLoc[0], riderLoc[1]),
             map: map,
             icon:'user.png'
@@ -60,6 +65,14 @@
                 map: map,
                 icon:'rickshaw.png'
             });
+
+            google.maps.event.addListener(marker, 'click', (function(marker, i) {
+                return function() {
+                    var content= "Driver ID : "+position[2]+" ("+position[3]+")"
+                    infowindow.setContent(content );
+                    infowindow.open(map, marker);
+                }
+            })(marker, i));
         }
     }
     $(function(){
