--- a/location/index.html
+++ b/location/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
 
-    <title></title>
+    <title>TukTuk - Bid Locations</title>
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,100,300,900,700">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
