--- a/location/index.html
+++ b/location/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
 
-    <title></title>
+    <title>TukTuk - Bid Locations</title>
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,100,300,900,700">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.22"
-           ></script>
+            ></script>
     <style type="text/css">
         html, body {
             height: 100%;
@@ -58,19 +58,20 @@
             map: map,
             icon:'user.png'
         });
+        var position
         for (i = 0; i < drivers.length; i++) {
-            var position = drivers[i].split(",")
+            position = drivers[i].split(",")
             marker = new google.maps.Marker({
-                position: new google.maps.LatLng(position[0], position[1]),
+                position: new google.maps.LatLng(drivers[i].split(",")[0], drivers[i].split(",")[1]),
                 map: map,
                 icon:'rickshaw.png'
             });
 
             google.maps.event.addListener(marker, 'click', (function(marker, i) {
                 return function() {
-                    var content= "Driver ID : "+position[2]+" ("+position[3]+")"
+                    var content= "Driver ID : "+drivers[i].split(",")[2]+" ("+drivers[i].split(",")[3]+")"
                     infowindow.setContent(content );
-                    infowindow.open(map, marker);
+                    infowindow.open(map, marker,i);
                 }
             })(marker, i));
         }
@@ -78,7 +79,7 @@
     $(function(){
 
 
-    //$('.test').text(window.location.href)
+        //$('.test').text(window.location.href)
 
 
 
